fixes gap in comments section

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1089,8 +1089,9 @@ body {
   &__body {
     padding: 130px 0 150px;
     display: flex;
-    gap: 60px;
+    gap: 15px;
     align-items: center;
+    justify-content: space-between;
 
     @media (max-width: 1023.98px) {
       flex-direction: column;
@@ -1098,6 +1099,7 @@ body {
 
     @media (max-width: 767.98px) {
       padding: 50px 0;
+      gap: 30px;
     }
   }
   &__content {
